--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: PHOTORAMA
 email: ""
 description: "Photo Journal"
 url: "https://kjawo.github.io"
-baseurl: "/photorama"
+baseurl: ""
 facebook_username: ""
 twitter_username: ""
 instagram_username: ""
